Rerun the scripts

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -45,6 +45,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
         
+      - name: Download provider scripts
+        run: bash scripts/download-providers.sh
+
+      - name: Download data scripts
+        run: bash scripts/download-data.sh
+
       - name: Build
         run: pnpm run build
         
