--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"clean": "rm -rf dist public/external"
+		"clean": "rm -rf dist public/external",
+		"format": "prettier --write .",
+		"format:check": "prettier --check ."
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^7.0.1",
@@ -22,6 +24,8 @@
 		"@astrojs/svelte": "^7.1.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-astro": "^0.14.1",
-		"svelte": "^5.38.7"
+		"prettier-plugin-svelte": "^3.2.8",
+		"svelte": "^5.38.7",
+		"svelte-preprocess": "^5.1.4"
 	}
 }
