Update the pnpm package in Github Action

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,15 +38,12 @@ jobs:
           node-version: '20'
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v3
+        uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: latest
 
       - name: Install dependencies
         run: pnpm install
-
-      - name: Run prebuild
-        run: pnpm run prebuild
 
       - name: Build
         run: pnpm run build
