--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,20 @@
 	"trailingComma": "es5",
 	"bracketSpacing": true,
 	"arrowParens": "avoid",
-	"printWidth": 80
+	"printWidth": 80,
+	"plugins": ["prettier-plugin-astro", "prettier-plugin-svelte"],
+	"overrides": [
+		{
+			"files": "*.astro",
+			"options": {
+				"parser": "astro"
+			}
+		},
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
